--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -49,10 +49,10 @@
         .input-field-title__text
           商品の詳細
       .input-field-main
-        = f.label :category, "カテゴリ"
+        = f.label :category_id, "カテゴリ"
         %span.required-true
           必須
-        = f.collection_select :category, Category.all, :id , :name, {include_blank: "---"}, required: true, class: "select-category", id: "parent-category"
+        = f.collection_select :category_id, Category.all, :id , :name, {include_blank: "---"}, required: true, class: "select-category", id: "parent-category"
         .error-field{data:{column_name: "category"}}
 
         = f.label :condition, "商品の状態"
@@ -70,7 +70,7 @@
         %span.required-true
           必須
         %br
-        = f.select :delivery_fee_payer, %Item.delivery_fee_payers.keys, {include_blank: "---"}
+        = f.select :delivery_fee_payer, Item.delivery_fee_payers.keys, {include_blank: "---"}
         .error-field{data:{column_name: "delivery_fee_payer"}}
         %br
         .input-field-main__delivery-method
@@ -106,7 +106,7 @@
             %span.required-true
               必須
           .input-field-main-price__right
-            = f.text_field :hoge, required: true, placeholder: "価格"
+            = f.text_field :price, required: true, placeholder: "価格"
             .error-field{data:{column_name: "price"}}
         %hr
         .input-field-main-price
