画像を選択できるように

--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -24,7 +24,8 @@
             #select-image-button__text
               クリックしてファイルをアップロード
     #image-file-fields
-      = file_field_tag :hoge, class: "new-item-image", id: "file_field_index_0", accept: "image/*", data: {index: 0}
+      = f.fields_for :image do |image|
+        = image.file_field :src, accept: "image/*"
     .error-field{data:{column_name: "item_images"}}
   .block.horizontal-padding-5
     .input-field
