--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -57,11 +57,13 @@
         （税込）
       .item-show__price--right
         送料込み
-    = link_to "" do
-      .button.back-red
-        購入画面に進む
-    = link_to "" do
-      .button.back-gray
-        商品を編集する
-    .item-show__detail
-      = @item.detail
+    - if @item.seller != current_user
+      = link_to "" do
+        .button.back-red
+          購入画面に進む
+    - if @item.seller == current_user
+      = link_to edit_item_path(@item) do
+        .button.back-gray
+          商品を編集する
+      .item-show__detail
+        = @item.detail
