--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -23,11 +23,11 @@
           %th.item-data__row--title
             カテゴリ
           %td.item-data__row--value
-            = link_to @item.category.root.name, ""
+            = link_to "#{@item.category.root.name}", category_path(@item.category.root)  ## パスを設定
             %br
-            = link_to ">#{@item.category.parent.name}", ""
+            = link_to ">#{@item.category.parent.name}", category_path(@item.category.parent)  ## パスを設定
             %br
-            = link_to ">#{@item.category.name}", ""
+            = link_to ">#{@item.category.name}", category_path(@item.category)  ## パスを設定
         %tr.item-data__row
           %th.item-data__row--title
             商品の状態
