有効期限を選択できるように

--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -27,10 +27,10 @@
             %span.required-true
               必須
             .input-field-multiple
-              = f.select :hoge, [], {include_blank: "---"}, id: "exp_month_form"
+              = f.select :hoge, [1,2,3,4,5,6,7,8,9,10,11,12], {include_blank: "---"}, id: "exp_month_form"
               .input-field-multiple__separate-text
                 月
-              = f.select :hoge, [], {include_blank: "---"}, id: "exp_year_form"
+              = f.select :hoge, [20,21,22,23,24,25], {include_blank: "---"}, id: "exp_year_form"
               .input-field-multiple__separate-text
                 年
         .input-field
