商品の購入ページへアクセスできるように

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -61,7 +61,7 @@
       .item-show__price--right
         送料込み
     - if @item.seller != current_user
-      = link_to "" do
+      = link_to purchase_confirmation_item_path(@item) do
         .button.back-red
           購入画面に進む
     = link_to "" do
