--- a/app/views/items/purchase_confirmation.html.haml
+++ b/app/views/items/purchase_confirmation.html.haml
@@ -5,12 +5,15 @@
   .block__main
     .item-purchase-confirmation
       .item-purchase-confirmation__image-and-name
-        = image_tag ""
+        // -----商品画像-----
+        = image_tag @item.images.first.src.url
         .item-purchase-confirmation__image-and-name--name
-          商品名hoge
+          // -----商品名-----
+          = @item.name
       .item-purchase-confirmation__price
         .item-purchase-confirmation__price--yen
-          ¥1000
+          // -----価格-----
+          ¥#{@item.price}
         .item-purchase-confirmation__price--fee
           \(税込み)
     .button.back-gray
@@ -19,40 +22,24 @@
       #amount__left
         支払金額
       #amount__right
-        ¥1000
-    - unless @card
-      .font-red
-        配送先と支払い方法の入力を完了してください。
-    = link_to "", method: :post do
-      .button{class: "#{'back-red' if @card}" }
-        購入する
+        // -----支払金額-----
+        ¥#{@item.price}
+
 .block.horizontal-padding-25
   .block__menu-left
     配送先
   .block__main
-    〒111-2222
+    〒#{current_user.address&.postal_code}
     %br
-    東京都　渋谷区神南1丁目12−16
+    #{current_user.address&.city} #{current_user.address&.house_number}
     %br
-    フリマ　太郎
+    #{current_user.last_name} #{current_user.first_name}
   .block__menu-right
     = link_to "" do
       変更する >
-.block.horizontal-padding-25
-  .block__menu-left
-    支払い方法
-  .block__main
-    #card-data
-      - if @card
-        = @card[:last4]
-        %br
-        = @card[:exp_month]
-        \/
-        = @card[:exp_year]
-        %br
-        = @card[:brand]
-      - else
-        \/
-  .block__menu-right
-    = link_to "", data: {turbolinks: false} do
-      変更する >
+.block__menu-left
+  支払い方法
+.block__main
+  #card-data
+    - if @card
+      = "************" + @card[:last4]
